# ChangeLog for media-gfx/fontmatrix
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  19 Jan 2009; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  fontmatrix-0.4.2.ebuild:
  Add suggested RDEPEND=${DEPEND}

  08 Aug 2008; Thomas Anderson <gentoofan23@gentoo.org>
  fontmatrix-0.4.2.ebuild:
  Fix qt4 dependencies for split qt4, quoting

  03 Aug 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  fontmatrix-0.4.2.ebuild:
  Simplify, add die to dobin

  30 Jul 2008; Markus Rennings (mren) <mren@mrmx.de>
  fontmatrix-0.4.2.ebuild:
  updated ebuild to the one from bugzilla, thx to Matteo 'The Peach' Pescarin

  08 Apr 2008; Markus Rennings (mren) <mren@mrmx.de>
  fontmatrix-0.4.2.ebuild:
  fixed a typo, thx to caratorn

  08 Apr 2008; Markus Rennings (mren) <mren@mrmx.de>
  -fontmatrix-0.4.1.ebuild, +fontmatrix-0.4.2.ebuild:
  Version bump

  07 Apr 2008; Markus Rennings (mren) <mren@mrmx.de>
  -fontmatrix-0.4.0.ebuild, +fontmatrix-0.4.1.ebuild, ,metadata.xml:
  Version bump

  05 Apr 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org> +metadata.xml:
  Add removed metadata.xml and missing Manifest

  04 Apr 2008; Markus Rennings (mren) <mren@mrmx.de>
  -fontmatrix-0.3.1.ebuild, +fontmatrix-0.4.0.ebuild, -metadata.xml:
  Version bump

  22 Jan 2008; Markus Rennings (mren) <mren@mrmx.de>
  -fontmatrix-0.3.0.ebuild, +fontmatrix-0.3.1.ebuild:
  version bump

  14 Jan 2008; Markus Rennings (mren) <mren@mrmx.de> +metadata.xml,
  +fontmatrix-0.3.0.ebuild:
  Initial ebuild for bug 201538
