@@ -1,4 +1,4 @@
-DIST fontmatrix-0.4.2-Source.tar.gz 656806 RMD160 64b54eea1b78101650296495d68e6813dccaea6c SHA1 6d4623b0b4169e9544259d4b04f9077c902b8dc3 SHA256 3b5ad1e27b33d81fea610d4748a9a42107006a36bff277529eb3377670600075
-EBUILD fontmatrix-0.4.2.ebuild 1098 RMD160 f18d7686a24148bc532e07fc6e222b35c4a8b265 SHA1 1454a1c9e0606d542ac36f2b3031bdce19b12c10 SHA256 77471936ab0670f13a23a8d5ce463a375c67c67480592a7e03c25d9f04de9d7d
-MISC ChangeLog 1534 RMD160 7879c448b91468bb675d34b83664e2b0f602c51e SHA1 7bedddb249d02ee2247aede1abaed0b5852190ca SHA256 c2b9da205248a9cad5584e077d223ab4faedde27b05c3a478bdc63994986b52f
+DIST fontmatrix-0.6.0-Source.tar.gz 2490774 RMD160 a419369172590fa08d5e0575ed5e91d6169bd8ee SHA1 9b1663a2a57f3b95e0eebc8cfa748ca9f99a6a48 SHA256 bcc5e929d95d2a0c9481d185144095c4e660255220a7ae6640298163ee77042c
+EBUILD fontmatrix-0.6.0.ebuild 1044 RMD160 b400fd333d46e2c3314a6a7a02282239c208301e SHA1 d29f71236bb6b08c566e420fbc26c98a73596e9f SHA256 6770c41ce0f6c5f632c59b70aacac84c9cc56685b35dc1a93566d4c5f66f08cd
+MISC ChangeLog 1679 RMD160 3e901b97da82bff619a1e9299a93e0e080117933 SHA1 18dc0e02ba7bd2abfeb9a597c4db60660c24df7f SHA256 7eb64aa154cbd7db95c7533467fcec1e4f946f08e60971cdc366a94ba255e297
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
