@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  05 Jul 2009; Markus Rennings (mren) <mren@mrmx.de>
+  -fontmatrix-0.4.2.ebuild, +fontmatrix-0.6.0.ebuild:
+  Version bump, slightly adjustments
+
   19 Jan 2009; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
   fontmatrix-0.4.2.ebuild:
   Add suggested RDEPEND=${DEPEND}
